--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "garea.js",
   "title": "Garea.js",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A simple selection of area in JavaScript",
   "main": "./dist/garea.common.js",
   "module": "./dist/garea.esm.js",
@@ -12,8 +12,9 @@
   ],
   "scripts": {
     "test": "jest",
-    "build": "rollup -c",
-    "compress": "uglifyjs dist/garea.js -o dist/garea.min.js -c -m --comments /^!/"
+    "rollup": "rollup -c",
+    "compress": "gulp minify",
+    "build": "yarn run rollup && yarn run compress" 
   },
   "engines": {
     "node": ">=10.0"
@@ -44,9 +45,10 @@
     "@babel/core": "^7.12.10",
     "@rollup/plugin-babel": "^5.2.2",
     "@rollup/plugin-node-resolve": "^11.0.1",
+    "gulp": "^4.0.2",
+    "gulp-uglify": "^3.0.2",
     "jest": "^26.6.3",
     "jest-canvas-mock": "^2.3.0",
-    "rollup": "^2.36.1",
-    "uglify-js": "^3.12.4"
+    "rollup": "^2.36.1"
   }
 }
