--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
-.idea
-.DS_Store
-node_modules
-yarn.lock
-package-lock.json
+node_modules/
+# IDE
+.idea/
+.vscode/
+.Ds_store
+# Build
+dist/
+build/
+# Enviroment
+.env
+.env.*
+# Yarn
+yanr-error.log
