--- a/package.json
+++ b/package.json
@@ -1,54 +1,57 @@
 {
-  "name": "garea.js",
-  "title": "Garea.js",
-  "version": "0.1.3",
-  "description": "A simple selection of area in JavaScript",
-  "main": "./dist/garea.common.js",
-  "module": "./dist/garea.esm.js",
-  "browser": "./dist/garea.min.js",
-  "files": [
-    "src",
-    "dist"
-  ],
-  "scripts": {
-    "test": "jest",
-    "rollup": "rollup -c",
-    "compress": "gulp minify",
-    "build": "yarn run rollup && yarn run compress" 
-  },
-  "engines": {
-    "node": ">=10.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/GIovaneSantosSilva/garea.js.git"
-  },
-  "keywords": [
-    "area",
-    "garea",
-    "garea.js",
-    "crop",
-    "image",
-    "select",
-    "react-area",
-    "react-crop",
-    "react-garea"
-  ],
-  "authors": [
-    "Giovane Santos <giovanesantos1999@gmail.com>"
-  ],
-  "bugs": {
-    "url": "https://github.com/GIovaneSantosSilva/garea.js/issues"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@rollup/plugin-babel": "^5.2.2",
-    "@rollup/plugin-node-resolve": "^11.0.1",
-    "gulp": "^4.0.2",
-    "gulp-uglify": "^3.0.2",
-    "jest": "^26.6.3",
-    "jest-canvas-mock": "^2.3.0",
-    "rollup": "^2.36.1"
-  }
+    "name": "garea.js",
+    "title": "Garea.js",
+    "version": "0.2.0",
+    "description": "A simple selection of area in JavaScript",
+    "main": "./dist/garea.common.js",
+    "module": "./dist/garea.esm.js",
+    "browser": "./dist/garea.min.js",
+    "files": [
+        "src",
+        "dist",
+        "LICENSE",
+        "README.md"
+    ],
+    "scripts": {
+        "test": "jest",
+        "size": "du -hs dist/",
+        "clean": "rm -rf dist",
+        "rollup": "rollup -c",
+        "build": "yarn clean && yarn rollup && yarn size"
+    },
+    "engines": {
+        "node": ">=10.0"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/GIovaneSantosSilva/garea.js.git"
+    },
+    "keywords": [
+        "area",
+        "garea",
+        "garea.js",
+        "crop",
+        "image",
+        "select",
+        "react-area",
+        "react-crop",
+        "react-garea"
+    ],
+    "authors": [
+        "Giovane Santos <giovanesantos1999@gmail.com>"
+    ],
+    "bugs": {
+        "url": "https://github.com/GIovaneSantosSilva/garea.js/issues"
+    },
+    "license": "MIT",
+    "devDependencies": {
+        "@babel/core": "^7.12.10",
+        "@rollup/plugin-babel": "^5.2.2",
+        "@rollup/plugin-commonjs": "^21.0.2",
+        "@rollup/plugin-node-resolve": "^11.0.1",
+        "jest": "^26.6.3",
+        "jest-canvas-mock": "^2.3.0",
+        "rollup": "^2.68.0",
+        "rollup-plugin-terser": "^7.0.2"
+    }
 }
