--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
     "name": "garea.js",
     "title": "Garea.js",
-    "version": "0.2.0",
+    "version": "0.2.0-rc0",
     "description": "A simple selection of area in JavaScript",
     "main": "./dist/garea.common.js",
     "module": "./dist/garea.esm.js",
     "browser": "./dist/garea.min.js",
     "files": [
-        "src",
         "dist",
         "LICENSE",
         "README.md"
@@ -46,6 +45,7 @@
     "license": "MIT",
     "devDependencies": {
         "@babel/core": "^7.12.10",
+        "@babel/preset-env": "^7.16.11",
         "@rollup/plugin-babel": "^5.2.2",
         "@rollup/plugin-commonjs": "^21.0.2",
         "@rollup/plugin-node-resolve": "^11.0.1",
