add: new version for types of garea

--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
     "name": "garea.js",
     "title": "Garea.js",
-    "version": "0.2.0-rc1",
+    "version": "0.2.0-rc5",
     "description": "A simple selection of area in JavaScript",
     "main": "./dist/garea.common.js",
     "module": "./dist/garea.esm.js",
     "browser": "./dist/garea.min.js",
-    "types": "./src/index.d.ts",
+    "types": "./types/index.d.ts",
     "files": [
         "dist",
         "LICENSE",
         "README.md",
-        "src/index.d.ts"
+        "types/index.d.ts"
     ],
     "scripts": {
         "test": "jest",
