--- a/package.json
+++ b/package.json
@@ -3,21 +3,20 @@
     "title": "Garea.js",
     "version": "0.2.4",
     "description": "A simple selection of area in JavaScript",
+    "authors": [
+        "Giovane Santos <giovanesantos1999@gmail.com>"
+    ],
+    "license": "MIT",
     "main": "./dist/garea.common.js",
     "module": "./dist/garea.esm.js",
     "browser": "./dist/garea.min.js",
     "types": "./types/index.d.ts",
-    "files": [
-        "dist",
-        "LICENSE",
-        "README.md",
-        "types/index.d.ts"
-    ],
     "scripts": {
         "test": "jest",
         "size": "du -hs dist/",
         "clean": "rm -rf dist",
         "rollup": "rollup -c",
+        "start": "webpack serve --progress",
         "build": "yarn clean && yarn rollup && yarn size"
     },
     "engines": {
@@ -27,6 +26,15 @@
         "type": "git",
         "url": "git+https://github.com/GIovaneSantosSilva/garea.js.git"
     },
+    "bugs": {
+        "url": "https://github.com/GIovaneSantosSilva/garea.js/issues"
+    },
+    "files": [
+        "dist",
+        "LICENSE",
+        "README.md",
+        "types/index.d.ts"
+    ],
     "keywords": [
         "area",
         "garea",
@@ -38,22 +46,19 @@
         "react-crop",
         "react-garea"
     ],
-    "authors": [
-        "Giovane Santos <giovanesantos1999@gmail.com>"
-    ],
-    "bugs": {
-        "url": "https://github.com/GIovaneSantosSilva/garea.js/issues"
-    },
-    "license": "MIT",
     "devDependencies": {
         "@babel/core": "^7.12.10",
         "@babel/preset-env": "^7.16.11",
         "@rollup/plugin-babel": "^5.2.2",
         "@rollup/plugin-commonjs": "^21.0.2",
         "@rollup/plugin-node-resolve": "^11.0.1",
+        "babel-loader": "^8.2.5",
         "jest": "^26.6.3",
         "jest-canvas-mock": "^2.3.0",
         "rollup": "^2.68.0",
-        "rollup-plugin-terser": "^7.0.2"
+        "rollup-plugin-terser": "^7.0.2",
+        "webpack": "^5.73.0",
+        "webpack-cli": "^4.10.0",
+        "webpack-dev-server": "^4.9.3"
     }
 }
