--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "@rollup/plugin-babel": "^5.2.2",
         "@rollup/plugin-commonjs": "^21.0.2",
         "@rollup/plugin-node-resolve": "^11.0.1",
+        "@types/jest": "^28.1.4",
         "babel-loader": "^8.2.5",
         "jest": "^26.6.3",
         "jest-canvas-mock": "^2.3.0",
