--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "garea.js",
     "title": "Garea.js",
-    "version": "0.2.4",
+    "version": "1.0.0-beta1",
     "description": "A simple selection of area in JavaScript",
     "authors": [
         "Giovane Santos <giovanesantos1999@gmail.com>"
